--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Totelepep" />
-    <title>Totelepep Soccer - Global Football Odds & Betting</title>
+    <title>Totelepep</title>
   </head>
   <body>
     <div id="root"></div>
